syntax = "proto3";

message RpcUiWidget {
  RpcUiWidgetId widget_id = 1;
  string widget_type = 2;
  map<string, RpcUiPropertyValue> widget_properties = 3;
  repeated RpcUiWidget widget_children = 4;
}

message RpcUiWidgetId {
  uint32 value = 1;
}

message RpcUiPropertyValue {
  oneof value {
    string string = 1;
    double number = 2;
    bool bool = 3;
    int32 undefined = 4;
  }
}

